# ArUco_groups-LK

./: .gitignore  1  1600x1200.yml  CMakeLists.txt  Makefile  README.md  TODO.txt  ar_stable.cpp  ar_stable_last.cpp  detect_markers  detect_markers.cpp  detect_markers_final.cpp  detect_markers_stable.cpp  main.cpp  markers_proj.odp  mypage.html  note.cpp  params.yml  pattern-6x6_1000-1.patt  plotgraph.py  plotxyz.py
old_versions/: ar_stableVO.cpp  ar_stable_frames.cpp  ar_stable_last.cpp  ar_stable_specific.cpp  version0.cpp  version1.cpp  version2.cpp  version3.cpp  version4.cpp  version5.cpp  version6.cpp
src/: ar_stable.cpp  ar_stable_video.cpp  functions.h  notes.txt
utils/: calibrate_camera.cpp  plotgraph.py  plotxyz.py
