cmake_minimum_required(VERSION 2.8)
project( PamaAR )
if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

SET( "OpenCV_DIR" "/home/nicola/opencv/build/" )
find_package( OpenCV REQUIRED )
find_package( OpenGL REQUIRED )
find_package( GLUT REQUIRED )
find_package( Eigen3 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
add_executable( detect_markers detect_markers.cpp )
add_executable( detect_stable detect_markers_stable.cpp )
add_executable( create_board create_board.cpp )
add_executable( calibrate_camera calibrate_camera.cpp)
target_link_libraries( detect_markers ${OpenCV_LIBS} ${OPENGL_LIBS} ${GLUT_LIBS})
target_link_libraries( detect_stable ${OpenCV_LIBS} ${OPENGL_LIBS} ${GLUT_LIBS})
target_link_libraries( create_board ${OpenCV_LIBS} ${OPENGL_LIBS} ${GLUT_LIBS})
target_link_libraries( calibrate_camera ${OpenCV_LIBS} ${OPENGL_LIBS} ${GLUT_LIBS})
